# M2_cours_ingenieur_sante

./: .gitignore  Description_data.txt  README.md  pyproject.toml
src/clinical_cool_etud/: __init__.py  config.py  correct_data.py  process_data.py
