[project]
name = "clinical-cool-etud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tmargate", email = "margate.tristan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
