[project]
name = "clinical-cool-etud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tmargate", email = "margate.tristan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[project.scripts]
process_data = "clinical_cool_etud.process_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_cool_etud"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
